<resources>
    <string name="app_name">Do4E</string>
    <string name="extended_fab_label" translatable="false">ADD</string>
    <string name="extended_fab_content_desc" translatable="false">Desc</string>

    <!--    On boarding_main    -->

    <string name="title">Doaey</string>
    <string name="subtitle">Never miss your medication again.</string>
    <string name="btn_getstarted">Get Started</string>

    <!--  On boarding_nav  -->
    <string name="btn_next"> Next </string>
    <string name="back"> Back </string>
    <string name="Skip"> SKIP </string>

    <!-- onBoard1   -->
    <string name="title_onboard1">Organize Your Meds</string>
    <string name="subtitle_onboard1">Easily schedule your medications and never miss a dose again.</string>

    <!-- onBoard2   -->
    <string name="title_onboard2">Smart Reminders</string>
    <string name="subtitle_onboard2">Receive timely alerts for every medication, even on the go.</string>

    <!-- onBoard3   -->
    <string name="title_onboard3">Track Your Health</string>
    <string name="subtitle_onboard3">Monitor your treatment progress and stay consistent with your health goals.</string>

    <!-- Main -->

    <!--  Botm_nav_bar  -->
    <string name="Home">Home</string>
    <string name="schedule_Nav_title">Schedule</string>
    <string name="meds_Nav_title">Meds</string>
    <string name="Settings">Settings</string>

    <!--  Header Main  -->
    <string name="welcome" translatable="false">Hello, Amro</string>
    <string name="Sub_welcome" translatable="false"> You are doing great today! </string>


    <!-- Add_meds FragGrande -->

    <string name="add_meds_title"> Add New Medicine</string>
    <string name="general"> Medicine Info</string>
    <string name="med_name"> Medicine Name </string>
    <string name="Dosage"> Dosage </string>
    <string name="Strt_dte"> Start Date </string>
    <string name="semi_col"> : </string>
    <string name="Today"> Today </string>
    <string name="Daily"> Daily </string>
    <string name="Weekly"> Weekly </string>
    <string name="Monthly"> Monthly </string>
    <string name="times_per_day"> Times per Day </string>
    <string name="one_time"> 1 time </string>
    <string name="two_times"> 2 times </string>
    <string name="three_times"> 3 times </string>
    <string name="minus"> − </string>
    <string name="plus"> + </string>
    <string name="schedule_freQ"> Schedule and Time </string>
    <string name="Duration">Duration</string>
    <string name="Number">1</string>
    <string name="Continuous_label">Continuous (no end date)</string>
    <string name="Days_label">DAYS</string>
    <string name="Weeks_label">WEEKS</string>
    <string name="Month_label">MONTHS</string>
    <string name="Continuous_badge">Ongoing · No End Date</string>
    <string name="once"> Once </string>
    <string name="Twice"> Twice </string>
    <string name="Trice"> Trice </string>
    <string name="Instructions"> Instructions </string>
    <string name="Before_Food"> Before Food </string>
    <string name="During_Food"> During Food </string>
    <string name="After_Food"> After Food </string>
    <string name="Notes"> Notes (Optional)</string>
    <string name="Notes_Description"> Avoid citrus fruits, take with water, etc</string>
    <string name="Save_Medicine"> Save Medicine </string>
    <string name="Reset"> Reset </string>
    <string name="pick_time">Pick a time</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTE</string>
    <string name="default_hour">00</string>
    <string name="default_minute">00</string>
    <string name="Medicine_type">Medicine Type</string>
    <string name="pill">Pill</string>
    <string name="syrup">Syrup</string>
    <string name="syringe">Syringe</string>



    <!--    Meds_No_frag   -->
    <string name="Medicine_No"> There Is No Medicines Yet !</string>
    <string name="title_meds_No"> Add your first medicine to get started. </string>
    <string name="Medicine_No_Daily"> Good you do not have any medicines Daily </string>
    <string name="Medicine_No_Monthly"> Good you do not have any medicines monthly </string>
    <string name="Medicine_NO_Weekly"> Good you do not have any medicines weekly </string>
    <string name="Adding_medicine"> Add Medicine </string>

    <!--    My Medicine   -->
    <string name="my_medicines_title">My Medicines</string>
    <string name="tab_today">Today</string>
    <string name="tab_weekly">Weekly</string>
    <string name="tab_monthly">Monthly</string>
    <string name="upcoming_recent">Upcoming &amp; Recent</string>
    <string name="course_progress">COURSE PROGRESS</string>
    <string name="status_taken">Taken</string>
    <string name="status_upcoming">Upcoming</string>
    <string name="status_missed">Missed</string>
    <string name="btn_log_now">Log Now</string>
    <string name="next_dose">Next dose: Today, 2:00 PM</string>
    <string name="check_timing">Check dose timing</string>
    <string name="day_progress">DAY 5 OF 10</string>

    <!--    My Schedule    -->
    <string name="Schedule_Title">My Schedule</string>
    <string name="Schedule_med_Name">Medicine Name</string>
    <string name="Hint_med_Name">e.g. Amoxicillin</string>
    <string name="Schedule_Time">Time</string>
    <string name="ans_time"> 08:00 AM </string>
    <string name="Schedule_Days">Days</string>
    <string name="ans_Days"> 7 </string>
    <string name="Tap_plus"> Tap + to add another medication </string>
    <string name="Save_Schedule"> Save Schedule </string>
    <string name="no_medicines_scheduled"> No medicines scheduled for today </string>

    <!-- Schedule_time_line  -->

    <string name="Time_selected">Time</string>
    <string name="medicine_name">Medicine</string>
    <string name="Edit_time">Edit time</string>


    <!-- Notification On Success -->
    <string name="success_msg"> Medicine Saved\nSuccessfully !</string>
    <string name="sub_success_msg"> We will remind you to take </string>
    <string name="Medicine_notify"> Panadol </string>
    <string name="at"> at </string>
    <string name="time_notify"> 00:00 AM </string>
    <string name="back_btn_home"> Back to Home </string>
    <string name="view_btn_sch"> View Schedule </string>

    <!-- bottom_sheet_layout Removing -->

    <string name="del_msg">Delete Medicine ?</string>
    <string name="sub_del_msg">Are you Sure to remove </string>
    <string name="del_med_name"> Medicine </string>
    <string name="del_dosage_med"> Dosage · Frequency </string>
    <string name="del_btn_confirm"> Delete Medicine </string>
    <string name="cancel_btn_confirm"> Cancel </string>
    <string name="safety_protocol"> DOAEY SAFETY PROTOCOL </string>

    <!-- MedAlarm_notification -->

    <string name="close_btn">Close</string>
    <string name="live_rm">LIVE REMINDER</string>
    <string name="medicine_desc">Medicine type</string>
    <string name="big_title">Time for your medication!</string>
    <string name="medicine_photo" translatable="false">Medicine photo</string>
    <string name="upcoming">UPCOMING DOSE</string>
    <string name="timer">00:00 AM</string>
    <string name="med_name_notification">Medicine Name</string>
    <string name="DOSAGE_name">DOSAGE</string>
    <string name="Dosage_desc" translatable="false">Dosage icon</string>
    <string name="Tablet">1 Tablet</string>
    <string name="before_food">Before Food</string>
    <string name="instruction">INSTRUCTION</string>
    <string name="instruction_icon" translatable="false">Instruction icon</string>
    <string name="Log_as">Log as Taken</string>
    <string name="snooze">Snooze</string>
    <string name="details">Details</string>
    <string name="skip_dose">Skip this dose</string>


    <!-- Settings_Screen -->

    <string name="settings_title">Settings</string>
    <string name="Audio_manager">Audio Manager</string>
    <string name="alert_sound">Alert Sound Type</string>
    <string name="rington">Ringtone</string>
    <string name="voice_message">Voice Message</string>
    <string name="choose_ring">Choose a ringtone</string>
    <string name="choose_voice">Choose a voice message</string>
    <string name="Snooze_duration">Snooze Duration</string>
    <string name="snooze_subtitle">How long to delay the reminder</string>
    <string name="save_settings">Save Settings</string>



</resources>