<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@color/white">

    <!-- Image_Icon -->
    <FrameLayout
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@drawable/circle_white_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:src="@drawable/save_success"
            />
    </FrameLayout>

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/success_msg"
        android:textColor="@color/Ebony"
        android:textSize="22sp" />

    <!-- Subtitle with spannable med name + time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:layout_marginStart="16dp"
            android:id="@+id/tv_success_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/manrope_regular"
            android:gravity="center"
            android:text="@string/sub_success_msg"
            android:textColor="@color/StateGray"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medicine_notify"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2.5dp"
            android:textColor="@color/junglegreen"
            android:fontFamily="@font/manrope_semibold"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2.5dp"
            android:textColor="@color/StateGray"
            android:fontFamily="@font/manrope_semibold"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_notify"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2.5dp"
            android:textColor="@color/junglegreen"
            android:fontFamily="@font/manrope_semibold"
            >
        </TextView>

    </LinearLayout>

    <!-- Back to Home button -->
    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/back_btn_home"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/junglegreen"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>

    <!-- View Schedule button -->
    <Button
        android:id="@+id/btn_view_schedule"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/view_btn_sch"
        android:textColor="@color/junglegreen"
        android:textSize="15sp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/junglegreen"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>
</LinearLayout>