<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Onboarding.onboarding_main"
    android:background="@color/PolshiedWhite">

    <ImageView
        android:id="@+id/onbrd_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/onboarding_icon"
        app:layout_constraintBottom_toTopOf="@+id/onbrd_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/onbrd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/title"
        android:textColor="@color/Ebony"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/onbrd_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onbrd_img" />

    <TextView
        android:id="@+id/onbrd_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/subtitle"
        android:textColor="#5C6E85"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onbrd_title" />

    <Button
        android:id="@+id/start_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/junglegreen"
        android:elevation="5dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/btn_getstarted"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="32dp"
        app:icon="@drawable/arrow_forward_icon"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onbrd_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>